--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: aliceblue;
     margin: 10px;
     padding: 0;
-    background-color: #705e88;
+    background-color: #292929;
 }
 
+ 
 .foto-personal {
     width: 200px;
     height: auto;
@@ -72,10 +74,30 @@ body {
     max-width: 1200px;
     margin: 0 auto;
 }
+#sobre-mi {
+    padding: 50px 20px;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+#sobre-mi {
+    padding: 50px 20px;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+#sobre-mi {
+    padding: 50px 20px;
+    max-width: 1200px;
+    margin: 0 auto;
+}
 
 #sobre-mi img {
     width: 300px;
     height: auto;
     border-radius: 10px;
     margin-top: 20px;
+}
+
+footer {
+    text-align: center;
+    
 }
